# face_alignment_cpp

./: CMakeLists.txt  README.md
sources/: detectObject.h  main.cpp  preprocessFace.cpp  preprocessFace.h
